tol_tests/tol/Bugzilla/bug_000263/test.tol
//////////////////////////////////////////////////////////////////////////////
// FILE   : test.tol
// PURPOSE: test for a resolved bug
//////////////////////////////////////////////////////////////////////////////

  Text PutRealFormat("%.15g");

//Sets the bugzilla identifier number, your e-mail and the bug´s summary 
  Real bugNum_ = 263;
  Text email_ = "vdebuen@tol-project.org"; 
  Text summary_ = "No casting is performed over an element of a Set";
  Text link_ = GetTolBugzillaLink(bugNum_);

//Write here the initial test TOL code if needed
  Real numErr0 = Copy(NError);
  Real numWar0 = Copy(NWarning);

  Set s = [[1]];
  Real r = 1;
  Polyn p1 = r;      // works
  Polyn p2 = s[1]; // error
  Serie ser = r;       // works
  Serie ser2 = s[1]; // error
  
//Extented information about test behaviour
  Set partialResults_ = Empty;

//This is a messure of the success of the test 
  Real quality_ = And
  (
    NError   == numErr0, 
    NWarning == numWar0
  );

//Return the results 
  Set resultStr_ = strTestStatus(summary_, link_, quality_,
                    "Partial results = "<<partialResults_,
                    "NO DBServerType", "NO DBServerHost", "NO DBAlias",
                    email_);
  WriteLn(""<<resultStr_);
  resultStr_
